<resources>
    <string name="app_name">Sodeg</string>
    <string name="properties">Properties</string>
    <string name="new_projects">New Projects</string>
    <string name="agents">Agents</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_available_data">No Available Data</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_as">Sign Up as …</string>
    <string name="individual">Individual</string>
    <string name="other_sign_up">Other Sign Up</string>
    <string name="log_out">Log out</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">7XXXXXXXX</string>
    <string name="about_me">About Me</string>
    <string name="real_estate_license">Real Estate License</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="seller_posts">Seller Posts</string>
    <string name="buyer_request">Requests</string>
    <string name="post_property">Post Property</string>
    <string name="total_floors">Total Floors</string>
    <string name="title">Title</string>
    <string name="street_address">Street Address</string>
    <string name="property_type">Property Type</string>
    <string name="property_number">Property Number</string>
    <string name="price">Price</string>
    <string name="postal_code">Postal Code</string>
    <string name="plot_area">Plot Area</string>
    <string name="photo_4">Photo 4</string>
    <string name="photo_3">Photo 3</string>
    <string name="photo_2">Photo 2</string>
    <string name="photo_1">Photo 1</string>
    <string name="description">Description</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="advert_type">Advert Type</string>
    <string name="my_properties">My Property</string>
    <string name="update_property">Update Property</string>
    <string name="update">Update</string>
    <string name="delete_property">Delete Property</string>
    <string name="list_property">List Property</string>
    <string name="my_listings">My Listings</string>
    <string name="agent_listings">Agent Listing</string>
    <string name="property_image">Property Image</string>
    <string name="delete">Delete</string>
    <string name="request_property">Request Property</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="looking_for">Looking for ...</string>
    <string name="make_request">Make Request</string>
    <string name="not_signed_in_title">You are not signed in</string>
    <string name="not_signed_in_message">Please sign in to access your profile</string>
    <string name="username">username</string>
    <string name="emptyPassword">Password cannot be empty</string>
    <string name="emptyEmail">Email cannot be empty</string>
    <string name="passwordInvalidLength">Password  must be greater than 6</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="empty_first_name">First Name cannot be empty</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_not_matching">Password and Confirm Password are not the same</string>
    <string name="empty_phone_number">Phone Number cannot be empty</string>
    <string name="empty_about_me">About me cannot be empty</string>
    <string name="empty_realestate_license">
        Real Estate license cannot be empty
    </string>
    <string name="empty_country">Country field cannot be empty</string>
    <string name="empty_city">City field cannot be empty</string>
    <string name="invalid_license_length">
        Real estate license cannot be more than 20 characters
    </string>
    <string name="invalid_phone_length">
        Phone number has to be at least 9 digits
    </string>
    <string name="profile_picture">Profile Picture</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="empty_subject">Subject cannot be empty</string>
    <string name="empty_message">Message cannot be empty</string>
    <string name="resizable_text_read_less">… less</string>
    <string name="resizable_text_read_more">… more</string>
    <string name="realtor">Realtor</string>
    <string name="enquiry_whatsapp">I want to enquire about: </string>
    <string name="name_label">Name:</string>
    <string name="phone_number_label">Phone Number:</string>
    <string name="email_label">Email:</string>
    <string name="subject_label">Subject:</string>
    <string name="message_label">Message:</string>
    <string name="location">Location</string>
    <string name="square_feet">Square Feet</string>
    <string name="construction_status">Construction Status</string>
    <string name="completion_date">Completion Date</string>
    <string name="post_newproject">Post NewProject</string>
    <string name="update_newproject">Update NewProject</string>

    <string-array name="userTypes">
        <item>SELLER</item>
        <item>AGENT</item>
        <item>PROJECTBUILDER</item>
    </string-array>

    <string-array name="advertType">
        <item>For Sale</item>
        <item>For Rent</item>
    </string-array>

    <string-array name="propertyType">
        <item>House</item>
        <item>Apartment</item>
        <item>Office</item>
        <item>Commercial</item>
        <item>Other</item>
    </string-array>

    <string-array name="constructionStatus">
        <item>Not Started</item>
        <item>Under Construction</item>
        <item>Completed</item>
    </string-array>
</resources>