<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/properties"
        android:title="@string/properties"
        android:enabled="true"
        android:icon="@drawable/home"/>

    <item
        android:id="@+id/my_properties"
        android:title="@string/my_properties"
        android:enabled="true"
        android:icon="@drawable/home"/>

    <item
        android:id="@+id/agent_listings"
        android:title="@string/agent_listings"
        android:enabled="true"
        android:icon="@drawable/home"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:enabled="true"
        android:icon="@drawable/account_circle"/>

    <item
        android:id="@+id/menu"
        android:title="@string/menu"
        android:enabled="true"
        android:icon="@drawable/menu"/>

</menu>