<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--    tools:showIn="navigation_view"-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sign_in"
            android:icon="@drawable/account_circle"
            android:title="@string/sign_in"
            android:visible="true"/>

        <item
            android:id="@+id/sign_up"
            android:icon="@drawable/account_circle"
            android:title="@string/sign_up"
            android:visible="true"/>

        <item
            android:id="@+id/request_property"
            android:title="@string/request_property"
            android:visible="true"
            />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/account_circle"
            android:title="@string/log_out"
            android:visible="false"/>
    </group>
</menu>