<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature_profile.presentation.profile.ProfileFragment">

    <RelativeLayout
        android:id="@+id/fragment_not_signed_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:src="@drawable/sign_in" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/not_signed_in_title"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/not_signed_in_message"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_below="@+id/textView_message"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/sign_in"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/fragmentLoggedIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:visibility="visible"
        app:cardBackgroundColor="#FFFFFF">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePhoto"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginEnd="16dp"
                tools:src="@drawable/account_circle"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/profilePhoto"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato_bold"
                android:textStyle="bold"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/first_name"
            android:textColor="#000000"
            android:fontFamily="@font/lato_regular"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="8dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_email" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="8dp"
            android:text="@string/phone_number"
            android:textColor="#000000"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_phone" />

        <TextView
            android:id="@+id/about_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato_regular"
            android:text=""/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginTop="16dp"
            tools:text="Other"/>

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginTop="16dp"
            tools:text="Kenya"/>

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            tools:text="Nairobi"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>